<resources>
    <string name="app_name">Keepin Track</string>
    <string name="settings">Settings</string>
    <string name="database_empty">Looks like there\'s nothing here. Click the Plus on the bottom right to get started.</string>
    <string name="button_edit_item_name">Change Name</string>
    <string name="button_edit_item_quantity">Modify Quantity</string>
    <string name="button_edit_item_price">Modify Price</string>
    <string name="button_edit_item_picture">New Picture</string>
    <string name="button_delete_item">Remove Item</string>
    <string name="button_order_item">Order Item</string>

    <!-- These strings are used for the alert dialog when adding items, and related toasts -->
    <string name="add_item_text_name">Item Name</string>
    <string name="add_item_text_quantity">Item Quantity</string>
    <string name="add_item_text_price">Item Price</string>
    <string name="button_add_item">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="add_item_insert_failed">Item insertion failed</string>
    <string name="add_item_insert_success">Item successfully added</string>
    <string name="button_sale">Sale</string>
    <string name="error_fill_item_fields">Item not added: please fill in all fields</string>
    <string name="error_add_item">Adding item failed:</string>
    <string name="item_count_remaining">%1$d left</string>
    <string name="currency_symbol">$%1$s</string>
    <string name="add_item_dialog_title">Add a new Item</string>
    <!-- These strings are used for the alert dialog when adding items, and related toasts -->

    <string name="edit_name_alert_title">Editing Name</string>
    <string name="edit_name_alert_hint">New item name</string>
    <string name="edit_name_alert_button">Edit Name</string>
    <string name="error_edit_item">Item not updated:</string>
    <string name="error_fill_edit_fields">Item not updated: please fill in the field</string>
    <string name="edit_price_alert_title">Editing Price</string>
    <string name="edit_price_alert_hint">New Price</string>
    <string name="edit_price_alert_button">Edit price</string>
    <string name="edit_quantity_alert_title">Editing Quantity</string>
    <string name="edit_quantity_alert_hint">New Quantity</string>
    <string name="edit_quantity_alert_button">Edit Quantity</string>
    <string name="edit_item_failed">Item update failed</string>
    <string name="edit_item_success">Item updated</string>
    <string name="delete_item_failed">Item deletion failed. Please wait a moment and try again.</string>
</resources>
